--- a/style.css
+++ b/style.css
@@ -1,54 +1,61 @@
-*{
-    
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 .container{
-    width: 90%;
-    height: 750px;
-    border: 3px solid #adc4b9;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 20px;
-    align-items: center;
-    justify-content: space-around;
-    
-}
-.item{
-    width: 250px; 
-    height: 300px;
-    border: 2px solid blanchedalmond;
-    display: flex;
-    margin: 5px;
-    object-fit: cover;
-     flex-shrink: 1;    
-    flex-grow: 1;
-    position: relative;
-    
-}
-img{
-    object-fit: contain;
-    width: 100%;
-    display: block;
-}
-p{
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    background-color: black;
     color: white;
-    height: fit-content;
-}
-.item:hover p{
-    background-color: #85A947;
-    opacity: 1;
-    width: 100%;
-    height: 300px;
+    padding: 15px;
     display: flex;
-    align-items: center;
+    justify-content: space-between;
+}
+.container span{
+    padding-right: 40px;
+}
+.bi{
+    font-size: 20px;
+}
+
+.zoom{
+    display: flex;
+    justify-content: space-around;
+    background-color: black;
+    color: white;
+    padding: 5px;
+    text-align: center;
+    padding-top: 20px;
+    border-radius: 20px;
+}
+.zoom2 p{
+    display: inline-block;
+}
+.zoom2{
+    display: flex;
     justify-content: center;
-    font-size: 32px;
-    transition: 0.5s ease;
+}
+.zoom2 .bi{
+    font-size: 15px;
+    margin: 10px;
+}
+.zoom21{
+    background-color: lime;
+}
+.item-7{
+    background-color: grey;
+}
+.bi-three-dots{
+    border: 2px solid white;
+    border-radius: 50%;
+    padding: 2px;
+}
+.zoom22{
+    width: 150px;
+    background-color: red;
+    color: white;
+}
+.task-3{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: black;
+    color: white;
+}
+
+h2{
+    color: rgb(133, 42, 57);
 }
